Using stringsplitter instead of stream